# teehistorian_extractor

./: .gitignore  Cargo.toml  dry_run_scrax_final_105.txt  dry_run_scrax_final_155.txt  scrax_53_top50_stats.txt  scrax_top20.txt  scrax_top_55.txt
scripts/: load2.py  load_arrow.py  load_msgpack.py  load_sequence.py
src/: export.rs  extractor.rs  lib.rs  main.rs  parser.rs  preprocess.rs  tick.rs
