[package]
name = "teehistorian_extractor"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "teehistorian_extractor"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
colog = "1.3.0"
derivative = "2.2.0"
log = "0.4.22"
pyo3 = { version = "0.22.4", features = ["extension-module"] }
serde = "1.0.210"
serde_json = "1.0.128"
teehistorian = "0.10.3"
twgame-core = "0.1.0"
