[package]
name = "teehistorian_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.1.0"
clap = { version = "4.5.20", features = ["derive"] }
colog = "1.3.0"
derivative = "2.2.0"
env_logger = "0.11.5"
hdf5-metno = "0.9.2"
log = "0.4.22"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num_cpus = "1.16"
parquet = "53.1.0"
plotlib = "0.5.1"
rayon = "1.10"
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
teehistorian = "0.10.3"
thiserror = "1.0.64"
twgame-core = "0.1.0"
